force-app/main/default/objects/LMS_Unit_Progress__c/LMS_Unit_Progress__c.object-meta.xml
<CustomObject>
    <label>LMS Unit Progress</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Unit Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Unit Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>