force-app/main/default/objects/LMS_Unit_Progress__c/fields/LMS_Training_Unit__c.field-meta.xml
<CustomField>
    <fullName>LMS_Training_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Unit</label>
    <referenceTo>LMS_Training_Unit__c</referenceTo>
    <relationshipLabel>Unit Progress</relationshipLabel>
    <relationshipName>Unit_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>